@@ -1,3 +1,7 @@
+2006-06-04  Marcel Telka  <marcel@telka.sk>
+
+	* POTFILES.in: Updated.
+
 2006-05-26  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
